Fix page layout on small viewports

--- a/pkg/web/assets/src/scss/mixins/_config.scss
+++ b/pkg/web/assets/src/scss/mixins/_config.scss
@@ -5,7 +5,7 @@
 
 $width-canvas-desktop: 80rem;
 $width-canvas-smalldesktop: 64rem;
-$width-canvas-tablet: 50rem;
+$width-canvas-tablet: 40rem;
 $width-gutter: 1.25rem;
 
 $width-epsilon: 0.01rem;
